--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,82 @@
     "- **Spatial Analysis**: Leverage geographical information for spatial and regional analysis.\n",
     "- **Statistical Analysis**: Employ statistical methods to validate findings and guide the modeling process.\n",
     "\n",
-    "In the forthcoming stages, we shall proceed with meticulous data cleaning, exploratory data analysis (EDA), and modeling preparation to ensure that our analyses and predictions are rooted in robust and accurate data handling. The synchronization of temperature and CO2 data will be pivotal, ensuring accurate cross-analysis and potential causation exploration."
+    "In the forthcoming stages, we shall proceed with meticulous data cleaning, exploratory data analysis (EDA), and modeling preparation to ensure that our analyses and predictions are rooted in robust and accurate data handling. The synchronization of temperature and CO2 data will be pivotal, ensuring accurate cross-analysis and potential causation exploration.\n",
+    "\n",
+    "In order to merge these datasets, we need to find a common attribute. It appears that the date of observation could serve this purpose. However, the date is represented by different column names in the two datasets (`Date` in the first and `dt` in the second). Furthermore, we need to ensure that the date formats are consistent between the two datasets.\n",
+    "\n",
+    "Let's proceed to merge the two datasets based on the date, after ensuring that the date columns are consistent:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(        Date  Decimal Date  Average  Interpolated   Trend  Number of Days   \n",
+       " 0 1958-03-01      1958.208   315.71        315.71  314.62            -1.0  \\\n",
+       " 1 1958-03-01      1958.208   315.71        315.71  314.62            -1.0   \n",
+       " 2 1958-03-01      1958.208   315.71        315.71  314.62            -1.0   \n",
+       " 3 1958-03-01      1958.208   315.71        315.71  314.62            -1.0   \n",
+       " 4 1958-03-01      1958.208   315.71        315.71  314.62            -1.0   \n",
+       " \n",
+       "    AverageTemperature  AverageTemperatureUncertainty         City   \n",
+       " 0              28.449                          0.214      Abidjan  \\\n",
+       " 1              19.916                          0.554  Addis Abeba   \n",
+       " 2              27.582                          0.371    Ahmadabad   \n",
+       " 3              12.665                          0.530       Aleppo   \n",
+       " 4              17.680                          0.392   Alexandria   \n",
+       " \n",
+       "          Country Latitude Longitude  \n",
+       " 0  Côte D'Ivoire    5.63N     3.23W  \n",
+       " 1       Ethiopia    8.84N    38.11E  \n",
+       " 2          India   23.31N    72.52E  \n",
+       " 3          Syria   36.17N    37.79E  \n",
+       " 4          Egypt   31.35N    30.16E  ,\n",
+       " (239237, 12))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Renaming the 'dt' column in the second dataset to 'Date' to maintain consistency\n",
+    "temperature_data.rename(columns={'dt': 'Date'}, inplace=True)\n",
+    "\n",
+    "# Ensure date columns are in the same format in both dataframes\n",
+    "co2_data['Date'] = pd.to_datetime(co2_data['Date'])\n",
+    "temperature_data['Date'] = pd.to_datetime(temperature_data['Date'])\n",
+    "\n",
+    "# Merging the datasets on the 'Date' column\n",
+    "merged_data = pd.merge(co2_data, temperature_data, on='Date', how='outer')\n",
+    "\n",
+    "# Displaying a sample of the merged data\n",
+    "merged_data.head(), merged_data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The merged dataset contains \\(239,237\\) rows and \\(12\\) columns, with the following attributes:\n",
+    "\n",
+    "- `Date`: The date of the observation\n",
+    "- `Decimal Date`: The date in decimal format (from the first dataset)\n",
+    "- `Average`: The average CO\\(_2\\) level\n",
+    "- `Interpolated`: The interpolated CO\\(_2\\) level\n",
+    "- `Trend`: The trend of CO\\(_2\\) levels\n",
+    "- `Number of Days`: The number of days in the period (from the first dataset)\n",
+    "- `AverageTemperature`: The average temperature (from the second dataset)\n",
+    "- `AverageTemperatureUncertainty`: The uncertainty of the average temperature measurement (from the second dataset)\n",
+    "- `City`: The city where the temperature was measured (from the second dataset)\n",
+    "- `Country`: The country where the city is located (from the second dataset)\n",
+    "- `Latitude`: The latitude of the city (from the second dataset)\n",
+    "- `Longitude`: The longitude of the city (from the second dataset)"
    ]
   }
  ],
